--- a/client/templates/projectInfo.html
+++ b/client/templates/projectInfo.html
@@ -5,6 +5,6 @@
 <div class="card" style="margin-top: 30px">
 	<div class="card-content">
 		<p>{{post.post}}</p><br>
-		<p>LINK: {{post.link}}</p>
+		<a href="{{post.link}}"><p>LINK</p></a>
 	</div>
 </div>
