--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -12,7 +12,7 @@
 		<ui-view></ui-view>
 	</div>
 	<div class="is-hidden-tablet">
-		<center><h1  class="title" style="margin-top: 20px;margin-bottom: 20px">Projects</h1></center>
+		<center><h1  class="title" style="margin-top: 20px;margin-bottom: 20px"><u>Projects</u></h1></center>
 		<div ng-repeat="posts in post" class="proj" onclick="window.scrollTo(0,0)">
 			<a ui-sref="index.project({projId: posts._id })" ><center>
 				<h1 class="title" style="margin-top: 10px">{{posts.title}}</h1>
